--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,6 @@ body {
     display: block;
     font-size: 20px;
     margin-left: 10px;
-
 }
 .result-details li:not(:first-child) span {
     font-weight: 500;
@@ -166,9 +165,22 @@ body {
     }
     .result-details li span{
         font-size: 15px;
+        margin-left: 5px;
     }
     .result-details li:not(:first-child){
         padding-left: 5px;
         border-left: none;
+    }
+    .content button {
+        border: none;
+        outline: none;
+        width: 40px;
+        padding: 8px 0;
+        color: #fff;
+        cursor: pointer;
+        font-size: 10px;
+        border-radius: 5px;
+        background: #17a2b8;
+        transition: transform 0.3s ease;
     }
 }
